/* Partikular na Layunin */

--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -25,8 +25,8 @@ Ing Pangunahing layunin ning KKPK para apisanmetung nala ding Kapampangan, mamye
 
 ==Partikular na Layunin==
 
-*Para asopan at adinan careng cailangan da ding Kapampangan.
-*Para ipagmaragul ing Lahing Kapampangan.
+*Para asopan la ding Kapampangan.
+*Para pagmaragul ing Lahing Kapampangan.
 *Para igiit ing pamisanmetung lalu na careng isyu patungkul careng Kapampangan.<ref>[http://www.sunstar.com.ph/pampanga/local-news/2015/05/17/kapampangan-group-holds-6th-mission-childrens-home-407951 Kapampangan group holds 6th mission in children's home]. Sunday, May 17, 2015 Sunstar Pampanga By:Ian Ocampo Flora</ref>
 
 == Mamuntukan==
