--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -18,7 +18,7 @@
 | demographics2_info1     = [[Pampanga]] (71%),[[Tarlac]] (50%) & [[Bataan]] (4%)  
 }}
 
-Ing '''Kapampangan Ku Pagmaragul Ku (KKPK) International Inc.'''<ref>{{cite news|author1=United Nation|title=Kapampangan Ku Pagmaragul Ku (KKPK) International Inc. (United Nations Profile)|url=https://esango.un.org/civilsociety/simpleSearch.do;jsessionid=09BA2BCA63F958E19665FB337C47A7B1?method=search&searchTypeRedef=simpleSearch&sessionCheck=false&searchType=simpleSearch&organizationNamee=kapampangan+ku+pagmaragul+ku}}</ref> metung yang non-profit Organization na mitatag niyang [[Septiembri]] [[18]], [[2011]] queng pamuntucan ng [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.jpg Jetlee Y. Tiongco].<ref>{{cite news|author1=Navales, Reynaldo G. (September 21, 2014)|title=Kapampangan FB group to continue mission for poor|url=http://www.sunstar.com.ph/pampanga/local-news/2014/09/21/kapampangan-fb-group-continue-mission-poor-366817|accessdate=20 January 2015|publisher=Suns Star Pampanga}}</ref> Ding KKPK Board of Directors, Administrador, Advisers, Opisyalis at Miyembru makatuknang queng [[Pampanga]],<ref name=SunStar358956>{{cite news|last1=Navales|first1=Reynaldo G.|title=Kapampangan group donates food packages to orphanage|url=http://www.sunstar.com.ph/pampanga/local-news/2014/08/10/kapampangan-group-donates-food-packages-orphanage-358956|accessdate=14 January 2015|agency=SunStar Pampanga|publisher=SunStar Publishing|date=10 August 2014}}</ref> [[Tarlac]], [[Bataan]]<ref name=SunStar358956 /><ref>{{cite web|last1=There was also a distribution of seeds and pesticides by|title=Kapampangan Ku Pagmaragul Ku|url=http://santaritapampanga.gov.ph/index.php/about-santa-rita/news-events/181-mymp-public-service|website=Official Website of Municipality of Sta Rita, Pampanga|accessdate=28 March 2015}}</ref> at aliwang [[Ding Bangsa ning yatu|Bangsa]].  
+Ing '''Kapampangan Ku Pagmaragul Ku (KKPK) International Inc.'''<ref>{{cite news|author1=United Nation|title=Kapampangan Ku Pagmaragul Ku (KKPK) International Inc. (United Nations Profile)|url=https://esango.un.org/civilsociety/simpleSearch.do;jsessionid=09BA2BCA63F958E19665FB337C47A7B1?method=search&searchTypeRedef=simpleSearch&sessionCheck=false&searchType=simpleSearch&organizationNamee=kapampangan+ku+pagmaragul+ku}}</ref> metung yang non-profit Organization na mitatag niyang [[Septiembri]] [[18]], [[2011]] queng pamuntucan ng [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.jpg Jetlee Y. Tiongco].<ref>{{cite news|author1=Navales, Reynaldo G. (September 21, 2014)|title=Kapampangan FB group to continue mission for poor|url=http://www.sunstar.com.ph/pampanga/local-news/2014/09/21/kapampangan-fb-group-continue-mission-poor-366817|accessdate=20 January 2015|publisher=Suns Star Pampanga}}</ref> Ding KKPK Board of Directors, Administrador, Advisers, Opisyalis at Miyembru makatucnang queng [[Pampanga]],<ref name=SunStar358956>{{cite news|last1=Navales|first1=Reynaldo G.|title=Kapampangan group donates food packages to orphanage|url=http://www.sunstar.com.ph/pampanga/local-news/2014/08/10/kapampangan-group-donates-food-packages-orphanage-358956|accessdate=14 January 2015|agency=SunStar Pampanga|publisher=SunStar Publishing|date=10 August 2014}}</ref> [[Tarlac]], [[Bataan]]<ref name=SunStar358956 /><ref>{{cite web|last1=There was also a distribution of seeds and pesticides by|title=Kapampangan Ku Pagmaragul Ku|url=http://santaritapampanga.gov.ph/index.php/about-santa-rita/news-events/181-mymp-public-service|website=Official Website of Municipality of Sta Rita, Pampanga|accessdate=28 March 2015}}</ref> at aliwang [[Ding Bangsa ning yatu|Bangsa]].  
 
 Ing Pangunahing layunin ning KKPK para apisanmetung nala ding Kapampangan, mamyeng serbisyu, Agrikultura at Serbisyu para queng Calicasan. Siguraduan ing ustung pamagbayu at pamanyulung. Queng plataporma ning KKPK regular dang gagawan ing misyun at proyektu queng miyaliwang lugar ning Pampanga at aliwang lugar na sasacupan ning Kapampangan queng miyaliwang actibidad. calupa ning pamamyeng regalu careng Home For the Aged, Orphanage at careng Aeta’s, Clean up Dirve, Tree Planting at pamamyeng vegetable seedlings.<ref>[http://santaritapampanga.gov.ph/index.php/about-santa-rita/news-events/181-mymp-public-service There was also a distribution of seeds and pesticides by "Kapampangan Ku Pagmaragul Ku". (Municipality of Sta Rita Official Website)]</ref> 
 
@@ -31,7 +31,7 @@ Ing Pangunahing layunin ning KKPK para apisanmetung nala ding Kapampangan, mamye
 
 == Mamuntukan==
 
-Ing Founder apin I [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.jpg Jetlee Y. Tiongco] metung yang OFW queng [[Saudi Arabia]], 2014-2015 Officers, Kayantabe din KKPK Advisers, Board of Trustees, Fundraising Committee, Budget & Finance Committee, Projects Committee, Advisers at Administrators.<ref>{{cite web|title=KKPK Officers|url=http://kkpkintl.zyro.com/KKPK-Officers/}}</ref><ref>{{cite web|title=KKPK Organizational Chart|url=http://kkpkintl.zyro.com/KKPK-Organizational-Chart//}}</ref>
+Ing Founder apin I [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.jpg Jetlee Y. Tiongco] metung yang OFW queng [[Saudi Arabia]], 2014-2015 Officers, cayantabe nala ding KKPK Advisers, Board of Trustees, Fundraising Committee, Budget & Finance Committee, Projects Committee, Advisers at Administrators.<ref>{{cite web|title=KKPK Officers|url=http://kkpkintl.zyro.com/KKPK-Officers/}}</ref><ref>{{cite web|title=KKPK Organizational Chart|url=http://kkpkintl.zyro.com/KKPK-Organizational-Chart//}}</ref>
 
 ==Deng Sanga (Chapters)/Sub-Groups==
 *KKPK Team Apamama ([[Apalit]], [[Macabebe, Pampanga|Macabebe]], [[Masantol,_Pampanga|Masantol]] & [[San Simon, Pampanga|San Simon]])
