Replacing Flag_of_South_Africa_1928-1994.svg with [[File:Flag_of_South_Africa_(1928-1994).svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: parenthesis added).

--- a/Template:Country_data_South_Africa.mw
+++ b/Template:Country_data_South_Africa.mw
@@ -5,7 +5,7 @@
 | flag alias = Flag of South Africa.svg
 | flag alias-1910 = South Africa Flag 1910-1912.svg
 | flag alias-1912 = South Africa Flag 1912-1928.svg
-| flag alias-1928 = Flag of South Africa 1928-1994.svg
+| flag alias-1928 = Flag of South Africa (1928-1994).svg
 | flag alias-naval = Naval Ensign of South Africa.svg
 | flag alias-naval-1922 = Naval Ensign of the United Kingdom.svg
 | flag alias-naval-1946 = Naval ensign of South Africa (1946-1951).svg
