*Empty MediaWiki Message*

--- a/Juan_Crisóstomo_Soto.mw
+++ b/Juan_Crisóstomo_Soto.mw
@@ -1,6 +1,55 @@
+
 I '''Juan Crisostomo Soto''' metung yang [[Kapampangan]] [[watas]].
 
-===Talambie===
+==Talambie==
+
+I '''Juan Crisostomo Soto y Caballa''' Penganak ya iniang Eneru 27, 1867 qng Bacolor, Pampanga at meangu ya bie iniang Hulyo 12, 1918. Metung yang zarzuelista, poeta, direktor at talasulat makuyad a kuwento. Misan yang meging empleyado ning gubyernu, sundalus ning rebolusyon, gerilya laban caring Amerikano, diyarista at provincial deputy assessor Meging talasulat yamurin queng La Independencia. Sumangid ning kakulangan na queng pormal a pamagaral, apansin ing keraklan ding maangabayat a katungkulan at mangayap a bague keyang agawa. Iniang edad 11 o 12 banua ya pamu mekasulat neng relihiyosong dula . Nung sumahan, magkabilangan lang 50 dula at zarzuela ding keyang alikha . Caring sablang dulang asulat na, ding dulang maki patriotikong tema ilang pekamatagumpe calupa ning Sigalut Ing Paniu nang Sitang at Ing Anac ning Katipunan.  Ing dulang Alang Dios ng tuturingan ding keraklan bilang obra maestra nang Crissot . Ating sasabing tagle ne ning obrang iti ing keyang pilosopiya queng bie. Atin ya muring mapilan poesiang asulat antimo ring Ing Bandera at Malaya a purus atin temang makabalen . Ing katunayan, tuturingan ya bilang kaunaunahang mamoesiang Kapampangan. Atin ya munamang makuyad a kuwento calupa ning Lidia. Mekasulat yang likas ning Noli Me Tangere queng Kapampangan. Meging editor ya mu naman caring Kapampangang peryodiko anti ring El Pueblo, El Imparcial at Ing Alipatpat. Kikilalanan ya bilang pekamayap a Kapampangang Dramatista at para caring aliwa, pati na murin pekamayap a Kapampangang talasulat pauli ring keraklan at kalidad ding keyang asulat. 
+
+
+Dacal la ring taung atin sasabian qng bie ra queti Capampangan ing menibatan la Baculud, ing balen  beitan nang Juan Crisostomo C. Soto,  lalu rang balu qng aus a Crissot. Mibait ya y Crissot canitang 27 ya ing Enero, 1867. Calabas ning apat  aldo bininiag neng Padre Silvino Isac, at meguing tegauan ne y Don Patricio Soliman. Calulu la mu ring familia na dapot gagalang do qng carelang lugal. Y Santiago Soto, yang tata na, metung alguacil mayor queti Baculud, cabang y Maxima Caballa yang ima na, at picabaluan yang uliran at malinis a pusu. Mecad amana na cang apu nang Sixto Caballa ing cabiasnan nang sumulat. 
+
+Mecapagaral yang caton, at qng edad nang labing apat megaral ya San Fernando, Pampanga. Anac ya pa mu biasa neng mamasa, dapot maina neman qng clasi. Meuili ya qng pamamasang novela at maralas manalbe ya caring palague rang Castila ampon Tagalug imbes na pagaralana ing tuturu na quea ning maestra na. Lalu pang megrabi iniang palague la San Fernando ring Companiang Artistang Castila. Mipabustan ing queang pamagaral uli na ning pamanalbe caring palague ra bengi-bengi. Dacala caring cacaluguran na ring mangapamulala uli na ning cabiasnan nang magmemoriang drama. 
+
+Pepagaral de qng Colegio de San Juan de Letran, at antimo ing sadia mipabustan mu naman ing pamagaral na. Queni ne sinulat ing mumuna nang drama meyapsi qng Romeo and Juliet maqui-titulung Ing Pamaquiasaua ning Mete. Y Crissot mismu yang ginanap qng papil na ning bidang lalaqui iniang iti mipalague ya Baculud. Uli na ning caculangan qng pamagsadia at senayan, o meguing matagumpe ing pamipalague. Agpang cang Don Modesto Joaquin, canu masiadung biasa y Crissot pangaras caring hablado at mas bague quea ing papil nang Judas queang pepilan qng Passion y Muerte nang Felix Galura at ya naman ing mismung guinanap qng papil nang Poncio Pilato. 
+
+Tinucnang ya qng pamagaral y Crissot at migbalic ya Baculud canitang 1884 at sibsub ne ing sarili na qng pamaniulat at megobra nia mu antimong escribiente qng oficinang gobiernu. 
+
+Minuna yang linugud y Crissot cang Julia Almeida, metung caring peca-malagung dalaga queti Baculud qng panaun ita. Tutul la ring pengari nang Julia qng pamicalugud da. Ban patutuan na nung nu anti ing lugud na qng babai, sinulat yang metung parapo iniang abalitan nang meliu ya y Julia quilub pisamban Baculud cabang sisimba ya uling  pa mengan. (Dapat nung maquinabang ca o ca maliaring mangan.) Macanian ing sasabian na:
+
+                                 Cutang na cung cutang nung mimasmas na ya,
+                                 Ecu maniuala mayap ya man ngara.
+                                 Mica-inge mung ditac queta nin carela,
+                                 Lingap-lingap na cu, bala cu nanu na.
+                                 gacu nang mimisip, gacu nang mumucul,
+                                 Nung mate ca Juliang nucu pa iluyun
+                                 Iting sambitan cu?  Qng dulum
+                                 Nang Tetis ning sira cung ucul!
+
+Dapot mayupaya ya ing pluma nang Crissot, tutul la man quea, dapot icua nia mu rin y Julia at layun micasal la. Mica-anac lang lima at adua la mu ring mebie. Mica-anac ya naman cang Macaria Sugui, ing ginanap bidang babai qng zarzuelang Ing Pamaquiasaua ning Mete. 
+
+Cabang atiu qng ruruc ning cataniagan ning pamaniulat na, ya naman ing pangauala na bie ning asaua nang y Julia canitang 1903 at pasibayu yang mequiasaua qng anac na ning metung miembru ning Orquestra Palma, y Rosario Palma, metung mu naman caring malagu nang dalaga ning Baculud at maqui-aguiu-aguiu la qng bie ra. Tutul la naman ding pengari ning babai dapot ala lang acarapat. Apat la ring meguing anac da at careti adua la mu ring mebie. 
+
+Alang mitagan copia caring minuna nang sinulat, puera na mu caring sinulat na canitang panaun da ring Americanu. Mecasulat yang 50 drama (3 trahedia; 8 macatula; 30 zarzuela; 9 miayaliua) 100 la ring asulat nang poesia cayabe ne careti ing novela nang Lidia, ing bucud  obra nang milimbag qng metung libru canitang 1907. Ding angang zarzuelang sinulat na milague langan qng Teatro Sabina de Bacolor pepagaua nang Don Ceferino Joven canitang 1901 at pemalaguiu ne qng capatad nang matuang dalaga. Bulan ning Octubre ing umpisa ning pamipalague zarzuela qng Teatro Sabina at mayaring Marzo para dinan dalan ing cenaculo. Caibat na ning Maleldo umpisan da na naman ing pamipalague angang bulan ning Mayo o Junio. Macatadua pabulan ing pamipalague. Caras na naman ning cauran painaua la at y Crissot canita neman susulat bayung zarzuela. 
+
+Ing zarzuelang Alang Dios! yang peca-masanting dili caring gueua na at iti minuna yang milague qng Teatro Sabina canitang 16 ya ing Noviembre, 1902 (Naval Baculud). Pecamaracal yang dili pepalub pera uling ulit-ulit deng ipalague at ra neman sasauan alben ding tau. Cabucas niang sinulat Crissot at ala ya man guinamit burador. Agaua ne iti pauli na ning pangamate na ning anac nang babai y Maria Luz Generosa. 
+
+Qng personal itsura, casantingan ya catas y Crissot, masanting ya pamicacatauan at mediu mabagsic lupa pauli ra ring bigoti na at urud na ning queang buac at mediu masicang ya pa. 
+
+Atin yang queinan malagung babai, malan masanting cule maputi at sapatus maputi. Neng maglacad ya pane yang macatucud at patingapun yang miminum cafe at aguiang bengi na miminum ya pa mu rin lalu na potang susulat ya. Ustu naman atin yang inspirasyun qng pamaniulat na ala yang tucnang sisigariliu at guiguinaquing at asajan mu naman qng misan nang pamaglucluc mayari ya ing susulat na. 
+
+Yang quemate na ing panga-ataqui na qng pusu qng bale na ning capatad na qng Isabel St. Sampaloc, Manila canitang abac na ning Julio 12, 1918. Micutcut ya qng Cementerio Catolico queti Baculud. Calabas ning pabanua, Agosto 2, 1919 pepatalacad deng monumento ring Aguman 33 antimong capigaganacan caring agaua nang Crissot. Quilub ning monumento nang Crissot pepalub do ring mapilan copia caring sinulat na at calabas ning mapilan banua linaue ra la at deti at la man melaso. 
+
+Ngening salucuyan, pilan la mo caya caring quecatang cayanacan mecad caring macatua man ring maquibalu caring casulatan gueua nang Crisst? Nung itulut na ning Miglalang, caring paintungul pang panaun mecad pasibayu talang abasa reting classicung casulatan gueua nang Crissot antimurin ring casulatan da pa ring malugud tang cabalen sinauang guinambul qng Amanung Sisuan calupa ra ri Padre Anselmo Pajardo, Pabalan, Galura, Joven, Gozun, Tuazon, Lenon at aliua na pang talasulat ning balen Baculud. At deti misinup la qng Museo ning DHVTSU--Center for Capampangan Culture and the Arts nung nu carin do maliaring aquit abasa ring cabalen tamu at aliua pang taung bisang mamasa. 
+
+
+
+Ing istorya ng Juan Crisostomo Sotto qng pamanialicsic nang Nestor R. Galura 
+
+
+==Ding Cayang Poesia==
+*Paninanp
+*Ing Bandera
+
 
 ===Ding Kayang Kinudta===
 
@@ -9,3 +58,7 @@ I '''Juan Crisostomo Soto''' metung yang [[Kapampangan]] [[watas]].
 {{Watas-stub}}
 [[Category: Kapampangan Watas]]
 [[Category:Deng Kapampangan]]
+
+
+==Kasugsug Kilwal==
+http://camaligcapampangan.info/index2.html
