*Empty MediaWiki Message*

--- a/Juan_Crisóstomo_Soto.mw
+++ b/Juan_Crisóstomo_Soto.mw
@@ -50,6 +50,12 @@ Ing istorya ng Juan Crisostomo Sotto qng pamanialicsic nang Nestor R. Galura
 *Paninanp
 *Ing Bandera
 
+==Dalerayan==
+{{Reflist}}
+
+==Suglung Palwal==
+*http://camaligcapampangan.info/index2.html
+
 
 
 
