/* Suglung Palwal (External links) */

--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -45,7 +45,7 @@ Ing Founder apin I [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.
 {{Reflist}}
 
 ==Suglung Palwal (External links)==
-*{{facebook|kapampangankupagmaragulku2012}} Fan Page
+*[http://www.facebook.com/kapampangankupagmaragulku2012 Kapampangan Ku Pagmaragul KU (KKPK) International Inc] queng [[Facebook]] Fan Page
 *[https://www.facebook.com/groups/kapampangankupagmaragulku2011/ Kapampangan Ku Pagmaragul Ku (KKPK) International Inc.] queng [[Facebook]] Group
 *[https://twitter.com/kkpkintofficial @KKPKIntOfficial] queng [[Twitter]]
 *[https://instagram.com/kkpkintlofficial/ @kkpkintlofficial] queng [[Instagram]]
