/* Deng Sanga (Chapters)/Sub-Groups */

--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -39,7 +39,7 @@ Ing Founder apin I [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.
 *KKPK Team [[Floridablanca, Pampanga|Florida]]
 *KKPK Team [[Lubao, Pampanga|Lubao]]
 *KKPK Team SPG ([[Santa_Rita,_Pampanga|Sta Rita]], [[Porac,_Pampanga|Porac]] & [[Guagua,_Pampanga|Guagua]])
-*KKPK Team The Northern Connection (TNC) ([[Angeles Lakanbalen|Angeles]], [[Mabalacat Lakanbalen|Mabalacat]], [[Magalang]] & [[Tarlac]])
+*KKPK Team The Northern Connection (TNC) ([[Angeles Lakanbalen|Angeles]], [[Mabalacat Lakanbalen|Mabalacat]], [[Magalang]] & [[Tarlac]])<ref>[http://kkpkintl.zyro.com/KKPK-ChaptersSub-groups/ KKPK Chapters/Sub-group]</ref>
 
 == Dalerayan (Reference) ==
 {{Reflist}}
