--- a/Arpaillargues-et-Aureillac.mw
+++ b/Arpaillargues-et-Aureillac.mw
@@ -1,3 +1,4 @@
+[[File:Arpaillargues-et-Aureillac - Eglise Saint-Christophe.JPG|thumbnail|.]]
 Ing '''Arpaillargues-et-Aureillac''' metung yang balen at [[commune in France|commune]] king [[Gard]], king mauling [[France]].
 
 
