--- a/Butu_ning_tau.mw
+++ b/Butu_ning_tau.mw
@@ -19,7 +19,7 @@
 |  DorlandsSuf  =
 }}
 
-[[File:Flaccid to Stiffy Penis, Erection development,.jpg|thumb|left|Butu ning tau]]
+[[File:Penis shaft veins.jpg|thumb|left|Butu ning tau]]
 Ing '''[[butu]] ning tau''' metung yang pangkilwal a organung seksual da reng [[lalaki]]ng [[tau]]. Metung yang [[organung reproduktibu]] a lulub bukud king magsilbi king pamani o pilwalan imi. Adwa la reng manimunang dake ning butu, mumuna, ing yamut,  (radix): Ini ing dakeng makatuglung, a bibilugan ning [[bulb ning butu]] king libutad ampo ing [[crus ning butu]], a maki metung king misusumangid ning bulb; ing katawan ning butu (corpus); ampo ing [[epithelium]] ning butu a bibilugan ning [[balat]] ning tangke of the penis consists of the (''shaft'') [[skin]], ing bulasisi, burungburung o burungburungan the [[burungburung]], burungburungan o bulasisi, ampo ing [[preputial mucosa]] king kilub ning burungburung at tatakap king [[buntuk ning butu]] o pun ning butu.
 
 ==Dalerayan==
