*Empty MediaWiki Message*

--- a/Haikou.mw
+++ b/Haikou.mw
@@ -10,9 +10,9 @@
 |total_type             = <!-- to set a non-standard label for total area and population rows -->
 |motto                  =
 <!-- images and maps  ----------->
-|image_skyline          = Haikou skyline in 2013 - 01.jpg
+|image_skyline          = Haikou_montage_-_03.jpg
 |image_size              = 250px
-|image_caption          = '''Deng gusali ning lakanbalen ning'''
+|image_caption          = 
 |image_flag             =
 |flag_size              =
 |image_seal             =
