--- a/Baculud.mw
+++ b/Baculud.mw
@@ -1,5 +1,5 @@
 {{Infobox settlement
-| name                   = Bacolor
+| name                   = Baculud
 | native_name            = ''Balen Baculud''
 | native_name_lang       = Kampampangan
 | settlement_type        = [[Municipalities of the Philippines|Municipality]]
@@ -56,7 +56,7 @@
 }}
 
 {{Philippine Census			
-| title = Sensus ning Populasyun <br> Bacolor, Pampanga
+| title = Sensus ning Populasyun <br> Baculud, Pampanga
 | 1990 = 67259		
 | 1995 = 13097		
 | 2000 = 16147		
@@ -68,18 +68,18 @@
 | 2030 = 		
 |}}
 
-Ing '''Bacolor''' pangapat yang klasing [[balen]] king [[lalawigan]] ning [[Pampanga]], [[Filipinas]]. Agpang keng  [[2000]] sensus, atin yang papulasyun a 16,147 a katau ka reng 3,029 pamimalemale.
+Ing '''Baculud''' pangapat yang klasing [[balen]] king [[lalawigan]] ning [[Pampanga]], [[Filipinas]]. Agpang keng  [[2000]] sensus, atin yang papulasyun a 16,147 a katau ka reng 3,029 pamimalemale.
 
 ==Historia==
 
-Bale ne'ing Bacolor nitang pekamatua queti Far East caring escuelang pang-"obra"* de Artes y Oficios de Bacolor, quen ya Noviembri a-cuatru, 1861 pa. Pequituqui ra ne mibayung laguiu ya quetang manuanang Don Honorio Ventura "College of Arts and Trades" sadia yang quilala ngeni pambansa yang universidad* na. Metung caring tungge pecatuang pisamban buung Pilipinas, queti ya mu naman ing San Guillermo Church balen neng carinan 1754 banua nang queyarian. Ing contribucion ning balen queng capangan a popular queti Balen Capampangan ing pansit palabuk a era 'parisan tamalis, putuseco, at bulagtang suman.
+Bale ne'ing Baculud nitang pekamatua queti Far East caring escuelang pang-"obra"* de Artes y Oficios de Bacolor, quen ya Noviembri a-cuatru, 1861 pa. Pequituqui ra ne mibayung laguiu ya quetang manuanang Don Honorio Ventura "College of Arts and Trades" sadia yang quilala ngeni pambansa yang universidad* na. Metung caring tungge pecatuang pisamban buung Pilipinas, queti ya mu naman ing San Guillermo Church balen neng carinan 1754 banua nang queyarian. Ing contribucion ning balen queng capangan a popular queti Balen Capampangan ing pansit palabuk a era 'parisan tamalis, putuseco, at bulagtang suman.
 
 Bayu ring Castila, "Baculud" deng ligyuan queng "makabakulud" basi nang pibatan matas-gabung pepa durutang cababan "Babo Lubao" nung queng Lumang Capampangan Banuang Mil quinyentus, pitumpulu't anam (1576)pindar neng Guillermu Manabat ing balian cambe ring Castilang migparam casaupan cang San Guillermu ne ligyu ing pisamban.
 
 Yang queng Pilipinas sadyang cabisera quetang ing Menila sacup yang Britania 1762, carin minatras la  ding Castila lalam nang Simon de Anda. Queng pamanurung da miras queting pueblu “Villa de Bacolor” deng inaus bayu
 basi qng Ari ning Espaniang decritu cabisera ne ning Pampanga, atlung siglu. 
 
-Pagsilebran de ing piesta ning paroquia balang ing bulan ning Pebreru adies ya ing La Naval naman a balen nang piesta neng bulan yang Mayu, catlung Duminggu na. Ing balen Bacolor makapabanda ya qng pekapusad na ning labuad Pampanga parti nang albugan, makapasiping la ding balen ning Guagua ampon Sta. Rita
+Pagsilebran de ing piesta ning paroquia balang ing bulan ning Pebreru adies ya ing La Naval naman a balen nang piesta neng bulan yang Mayu, catlung Duminggu na. Ing balen Baculud makapabanda ya qng pekapusad na ning labuad Pampanga parti nang albugan, makapasiping la ding balen ning Guagua ampon Sta. Rita
 
 Ciudad Angeles at Porac lang norte na Ciudad San Fernando yang queng aslagan na ding balen Minalin at Sto Tomas la queng parti nang baba maka'tilu banda. Ing sucad ning balen, miguit-culang atiu sitenta y unu kil'metru codradu lalaut yang manga limang kilumetru ibat capitolyu, Ciudad San Fernando.
 
@@ -87,7 +87,7 @@ Aduampulu't metung lang baryu atiu keti.
 
 ==Barangay==
 
-Ing Bacolor atin yang 21 a [[barangay]].
+Ing Baculud atin yang 21 a [[barangay]].
 <table border=0><tr>
 <td valign=top>
 * Balas
