--- a/Christopher_Columbus.mw
+++ b/Christopher_Columbus.mw
@@ -1,4 +1,69 @@
-*buttholes are tasty at night and smoother than a fresh dry hippie in the day
+{{otheruses4|the explorer|the American filmmaker|Chris Columbus (filmmaker)}}
+{{pp-semi-protect|small=yes}}
+{{Infobox Person
+  | name = Christopher Columbus and i kile cats
+  | image = Colomb.jpeg
+  | image_size = 
+  | occupation___do_we_want_this? = [[List of maritime explorers|Maritime explorer]] for the [[Crown of Castile]]
+  | title = [[Admiral]] of the [[Ocean Sea]];<br />[[Viceroy]] and Governor of the Indies
+  | caption = Larawan nang Christopher Columbus; gewa neng [[Ridolfo Ghirlandaio]] aniang mete ne i Columbus.
+  | birth_date = [[August 25]]-[[October 31]], [[1451]]
+  | birth_place = 
+  | death_date = {{death date|1506|5|20|mf=y}}
+  | death_place = outside [[Valladolid]], [[Spain]]
+  |names in other languages = [[Latin language|Latin]]: Christophorus Columbus; [[Italian language|Italian]]: '''Cristoforo Colombo'''; [[Portuguese language|Portuguese]]: '''Cristóvão Colombo''', formerly ''Christovam Colom''; [[Spanish language|Spanish]]: '''Cristóbal Colón'''; [[Catalan language|Catalan]]: '''Cristòfor Colom''' 
+  | nationality = [[Republic of Genoa|Genovese]]
+  | other_names = Cristoforo Colombo<br />Cristóbal Colón
+  | religion = [[Roman Catholic]]
+  | spouse = [[Filipa Moniz]] (c. 1476-1485)
+  | children = [[Diego Colón|Diego]]<br />[[Fernando Colón|Fernando]]
+  | relatives = [[Bartolomeo Columbus|Bartolomeo]] (brother)<br />Diego (brother)
+}}
+<!--ACCORDING TO [[WP:Style]], places of b./d. must be listed in the text proper-->
+I '''Christopher Columbus''' (pilatan ning [[August 25]] ampong [[October 31]], [[1451]] – [[May 20]], [[1506]]), '''Cristóbal Colón''' king Castila, at '''Cristoforo Colombo''' king orihinal a Italianu, metung yang talapaglayag, kolonialista, ampong talapaglakbe. Uli ning kayang pamaglakbe king [[Atlantic Ocean]], akilala de reng keraklan king [[Europa]] ing Albugang Kapitnang-Yatu (Western Hemisphere) ampo reng [[w:America (continent)|kontinenting America]]. Lipat ning aliwa ya ing mumunang miras karing Americas manibat king [[Afro-Eurasia]]{{mdash}}aunahan neng manga limang dalang banuang [[Leif Ericson]], at [[Pre-Columbian trans-oceanic contact|mapaliaring deng aliwa]]{{mdash}}inumpisan nang Columbus ing maleparan a pamiugnayan da reng [[Demography of Europe|Europeo]] ampo reng [[w:Indigenous peoples of the Americas|tubu kareng Americas]]. Inumpisan na king kayang e matagumpeng pamagtangkang mitátag tuknangan o balayán (''settlement'') king isla ning [[Hispaniola]] ing prosesu ning pamaniakup da reng Castila king "[[Bayung Yatu]]" (New World). (Gagamitan de ing katayang "[[w:pre-Columbian|pre-Columbian]]" ba rong tulduan deng kultura ampong lahi kareng Americas bayu ing paniatang da ri Columbus ampo reng Europeong minalili kaya.)
+           
+== Notes ==
+{{reflist|2}}
+
+== Dalerayan ==
+
+* [[J. M. Cohen|Cohen, J.M.]] (1969) ''The Four Voyages of Christopher Columbus: Being His Own Log-Book, Letters and Dispatches with Connecting Narrative Drawn from the Life of the Admiral by His Son Hernando Colon and Others''. London UK: Penguin Classics.
+* Cook, Sherburn and Woodrow Borah (1971) ''Essays in Population History, Volume I''. Berkeley CA: University of California Press
+* Crosby, A. W. (1987) ''The Columbian Voyages: the Columbian Exchange, and their Historians.'' Washington, DC: American Historical Association.
+* [[Thomas Friedman|Friedman, Thomas]] (2005) ''The World Is Flat: A Brief History of the Twenty-first Century''. New York: Farrar Straus Giroux.
+* [[Michael H. Hart|Hart, Michael H.]] (1992) ''[[The 100]]''. Seacaucus NJ: Carol Publishing Group.
+* Keen, Benjamin (1978) ''The Life of the Admiral Christopher Columbus by his Son Ferdinand,'' Westport CT: Greenwood Press.
+* Lowen, James. "Lies My Teacher Told Me". 
+* Nelson, Diane M. (1999) ''A Finger in the Wound: Body Politics in Quincentennial Guatemala''. Berkeley CA: University of California Press.
+* [[Samuel Eliot Morison|Morison, Samuel Eliot]], ''Admiral of the Ocean Sea: A Life of Christopher Columbus'', Boston,  Little, Brown and Company, 1942.
+* [[Samuel Eliot Morison|Morison, Samuel Eliot]], ''Christopher Columbus, Mariner'', Boston, Little, Brown and Company, 1955.
+* Phillips, W. D. and C. R. Phillips (1992) ''The Worlds of Christopher Columbus.'' Cambridge UK: Cambridge University Press.
+* Turner, Jack (2004) ''Spice: The History of a Temptation''. New York: Random House.
+* Wilford, John Noble (1991) ''The Mysterious History of Columbus: An Exploration of the Man, the Myth, the Legacy''. New York: Alfred A. Knopf.
+* [[Manuel Rosa|Rosa, Manuel DaSilva]] (2006) ''O Mistério Colombo Revelado''. Lisbon: Ésquilo.
+* Fuson, Robert H. (1992) ''The Log of Christopher Columbus''. Camden, Maine: International Marine Publishing
+
+== Lon la murin deti ==
+* ''[[1492: Conquest of Paradise]]'', a 1992 [[biopic]] film by [[Ridley Scott]]
+* ''[[Origin theories of Christopher Columbus]]''
+* ''[[Christopher Columbus: The Discovery]]'', a 1992 [[biopic]] film by [[Alexander Salkind]]
+* ''[[Christopher Columbus (film)|Christopher Columbus]]'', a 1949 film starring [[Fredric March]] as Columbus
+* [[List of Viceroys of New Spain]]
+* [[Viceroyalty of New Spain]]
+* [[Bartolomeo Columbus]]
+* [[Columbus Day]]
+* [[Colombia]], [[South American]] country named in honor of ''Christopher Columbus''
+* [[Fernando Colón]]
+* [[Guanahani]] (a discussion of candidates for site of first landing)
+* [[Knights of Columbus]]
+* [[List of places named for Christopher Columbus]]
+* [[Paolo dal Pozzo Toscanelli]]
+* [[Pre-Columbian trans-oceanic contact]]
+* [[Rafael Perestrello]]
+* [[Spanish colonization of the Americas]]
+* [[Egg of Columbus]]
+
+== Suglung palual ==
 {{wikiquote}}
 {{Commons|Christophorus Columbus|Christopher Columbus}}
 * [http://www.bartleby.com/43/2.html The Letter of Columbus to Luis de Sant Angel Announcing His Discovery]
@@ -11,7 +76,7 @@
 * [http://red-coral.net/Columb.html Columbus in the Bay of Pigs] an historical poem about Columbus' invasion and Indigenous resistance
 * [http://www.1911encyclopedia.org/Christopher_Columbus Christopher Columbus] 1911 Britannica article
 
-;BUNGHOLES
+;IMDB
 * {{imdb title|id=0956118|title=Animated Hero Classics: Christopher Columbus (1991)}}
 * {{imdb title|id=|0103594|title=1492: Conquest of Paradise (1992)}}
 
