Removing "National_anthem_of_Afghanistan.ogg", it has been deleted from Commons by [[commons:User:INeverCry|INeverCry]] because: Per [[:c:Commons:Deletion requests/File:National anthem of Afghanistan.ogg|]].

--- a/Afganistan.mw
+++ b/Afganistan.mw
@@ -10,7 +10,7 @@
 |image_coat = Coat of arms of Afghanistan.svg
 |symbol_type = Sagkal ning armas
 |image_map = Afghanistan (orthographic projection).svg
-|national_anthem = ''[[Afghan National Anthem]]''<br /><center>[[File:National anthem of Afghanistan.ogg]]</center>
+|national_anthem = ''[[Afghan National Anthem]]''<br /><center></center>
 |languages_type = [[Opisyal a amanu]]<ref name=AO/>
 |languages = {{hlist|style=white-space:nowrap; |[[Pashto language|Pashto]] |[[Dari (Persian dialect)|Dari (Persian)]]}}
 |demonym = [[Demography of Afghanistan|Afghan]]{{ref label|crown|alternatives|none}}
