Miyalilan yang "I" ing "Si" (milikas yang Kapampangan ing katayang Tagalug).

--- a/Yudai_Chiba.mw
+++ b/Yudai_Chiba.mw
@@ -1,4 +1,4 @@
-Si '''Yudai Chiba''' ([[Hapones]]: 千葉 雄大, ''Chiba Yūdai'', mibait Marsu 09, 1989, [[Prepektura ning Miyagi]])<ref name="profile">{{Cite web |author= |date= |url=http://www.japanmusic.jp/2010/08/post-74.html |title=タレント一覧 > 千葉雄大 |work= |publisher=[[ジャパン・ミュージックエンターテインメント]] |accessdate=2013-05-22}}</ref> metung yang artista king [[Hapon]].
+I '''Yudai Chiba''' ([[Hapones]]: 千葉 雄大, ''Chiba Yūdai'', mibait Marsu 09, 1989, [[Prepektura ning Miyagi]])<ref name="profile">{{Cite web |author= |date= |url=http://www.japanmusic.jp/2010/08/post-74.html |title=タレント一覧 > 千葉雄大 |work= |publisher=[[ジャパン・ミュージックエンターテインメント]] |accessdate=2013-05-22}}</ref> metung yang artista king [[Hapon]].
 
 ==Pilomograpiya==
 ===Teleserye===
