*Empty MediaWiki Message*

--- a/Lugo.mw
+++ b/Lugo.mw
@@ -36,7 +36,7 @@ date-population = 2010|
 population-ranking = 36|
 density = 296,06|
 date-density = 2010|
-website = http://www.lugo.es|
+website = http://lugo.gal/|
 postal_code = 27xxx|
 area_code = 982|
 }}
