--- a/Luksemburgu.mw
+++ b/Luksemburgu.mw
@@ -17,7 +17,7 @@
 |leader_title1            = [[Grand Ducal Family of Luxembourg|Grand Duke]]
 |leader_title2            = [[Prime Minister of Luxembourg|Prime minister]]
 |leader_name1             = [[Grand Duke Henri of Luxembourg|Grand Duke Henri]] <small>([[List of Grand Dukes of Luxembourg|List]])</small>
-|leader_name2             = [[Jean-Claude Juncker]] <small>([[List of Prime Ministers of Luxembourg|List]])</small>
+|leader_name2             = [[Xavier Bettel]] <small>([[List of Prime Ministers of Luxembourg|List]])</small>
 |sovereignty_type         = [[Independence]]
 |established_event1       = Declared
 |established_event2       = Confirmed
