--- a/Tala_da_reng_bangsa_agpang_king_kontinenti.mw
+++ b/Tala_da_reng_bangsa_agpang_king_kontinenti.mw
@@ -56,7 +56,7 @@ Some countries are considered ''[[transcontinental country|transcontinental]]'',
 * '''{{flag|Rwanda|size=50px}}''' – [[Kigali]]
 * ''{{flag|Saint Helena|size=50px}}'' ([[British overseas territory|overseas territory of the United Kingdom]])  – [[Jamestown, Saint Helena|Jamestown]]
 * '''{{flag|São Tomé and Príncipe|size=50px}}''' – [[São Tomé]]
-* '''{{flag|Senegal|size=50px}}''' – [[Dakar]]
+* '''Senegal – [[Dakar]]'''
 * '''{{flag|Seychelles|size=50px}}''' – [[Victoria, Seychelles|Victoria]]
 * '''{{flag|Sierra Leone|size=50px}}''' – [[Freetown]]
 * '''{{flag|Somalia|size=50px}}''' – [[Mogadishu]]
