--- a/Tala_da_reng_bangsa_agpang_king_kontinenti.mw
+++ b/Tala_da_reng_bangsa_agpang_king_kontinenti.mw
@@ -114,7 +114,7 @@ Some countries are considered ''[[transcontinental country|transcontinental]]'',
 * '''''{{flag|Palestinian territories|size=50px}}''''' (collectively the territories of the [[West Bank]] and the [[Gaza Strip]])
 * '''{{flag|Philippines|size=50px}}''' – [[Manila]]
 * '''{{flag|Qatar|size=50px}}''' – [[Doha]]
-* '''{{flag|Saudi Arabia|size=50px}}''' – [[Riyadh]]
+* '''Saudia Arabia''' – [[Riyadh]]
 * '''{{flag|Singapore|size=50px}}''' – Singapore ([[city-state]])
 * '''{{flag|Sri Lanka|size=50px}}''' – [[Sri Jayawardenepura]]
 * '''{{flag|Syria|size=50px}}''' – [[Damascus]]
