--- a/Paktura_da_reng_Bangsa.mw
+++ b/Paktura_da_reng_Bangsa.mw
@@ -263,7 +263,7 @@
 * {{flag|Swaziland}} – Kaarian ningSwaziland
 * {{flag|Sweden}} – Kaarian ningSweden
 * {{flag|Switzerland}} – Swiss Confederation
-* {{flag|Syria}} – Syrian Arab Republic
+* {{flag|South Sudan}} – Republica ning the South Sudan
 
 === T ===
 :* ''See [[#C|China, Republica ning]] for the country that is commonly referred to as '''[[Taiwan]]''
